[project]
name = "linear_regression_analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yongjer", email = "jerjer920813@gmail.com" }
]
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/yin_guo_guan_xi"]
